Fixed margin on small screens

--- a/style.scss
+++ b/style.scss
@@ -78,11 +78,18 @@ html {
         .wrapper {
             margin: 0;
             padding: 0;
+            width: 100%;
 
             .section-header {
                 margin-left: 8%;
                 font-size: 2.5em;
                 font-weight: bold;
+            }
+
+            @media  screen and (max-width: 500px) {
+                .section-header {
+                    font-size: 1.5em;
+                }
             }
 
             main {
@@ -160,7 +167,7 @@ html {
                             
                             .project {
                                 background-color: $project-card;
-
+                                z-index: 50;
                                 margin: 1em 0;
                                 border: 1px solid black;
                                 border-radius: 10px;
@@ -209,11 +216,32 @@ html {
                                     font-weight: bold;
                                     text-decoration: underline;
                                     .project-img {
+                                        max-width: 100%;
                                         max-height: 200px;
-                                    
                                         &:hover {
                                             transform: scale(3);
                                             position: relative;
+                                            z-index: 90;
+                                            bottom: 150px;
+                                        }
+
+                                    }
+                                    @media screen and (max-width: 800px) {
+                                        .project-img {
+                                            &:hover {
+                                                transform: scale(1.8);
+                                                bottom: 50px;
+                                                
+                                            }
+                                        }
+                                    }
+                                    @media screen and (max-width: 400px) {
+                                        .project-img {
+                                            &:hover {
+                                                transform: scale(1.2);
+                                                bottom: 0;
+                                                
+                                            }
                                         }
                                     }
                                 }
@@ -270,6 +298,15 @@ html {
                                 i {
                                     margin-right: 1em;
                                 }
+                            }
+
+                            @media screen and (max-width: 600px){
+                                .contact-item {
+                                    display: flex;
+                                    flex-direction: column;
+                                    align-items: center;
+                                    font-size: 1em;
+                                }                                
                             }
                         } 
                     
