--- a/styles/jumbotron.scss
+++ b/styles/jumbotron.scss
@@ -47,7 +47,7 @@
         }
 
         #heading {
-            font-family: "cascadia";
+            font-family: "cascadia", monospace;
         }
         
         #subhead {
